force-app/main/default/objects/Receipts_Settings__c/Receipts_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Receipts Settings</label>
</CustomObject>