force-app/main/default/objects/Receipts_Settings__c/fields/Pagination_Size__c.field-meta.xml
<CustomField>
    <fullName>Pagination_Size__c</fullName>
    <defaultValue>10</defaultValue>
    <label>Pagination Size</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>