force-app/main/default/objects/Receipts_Settings__c/fields/Payment_Form_Excluded__c.field-meta.xml
<CustomField>
    <fullName>Payment_Form_Excluded__c</fullName>
    <description>User Name or Id with separate line</description>
    <inlineHelpText>User Name or Id with separate line</inlineHelpText>
    <label>Payment Form Excluded</label>
    <type>TextArea</type>
</CustomField>