force-app/main/default/objects/Receipts_Settings__c/fields/Payment_Txn_Record_Type_Excluded__c.field-meta.xml
<CustomField>
    <fullName>Payment_Txn_Record_Type_Excluded__c</fullName>
    <description>Developer Name of Payment Txn Record Type to be excluded from search</description>
    <inlineHelpText>Developer Name of Payment Txn Record Type to be excluded from search</inlineHelpText>
    <label>Payment Txn Record Type Excluded</label>
    <type>TextArea</type>
</CustomField>