force-app/main/default/objects/Receipts_Settings__c/fields/Printable_Max_Page__c.field-meta.xml
<CustomField>
    <fullName>Printable_Max_Page__c</fullName>
    <defaultValue>200</defaultValue>
    <label>Printable Max Page</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>